--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -31,7 +31,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:fontFamily="@font/special_gothic_expanded_bold"
-                    android:text="@string/top_bar_title"
+                    android:text="@string/app_name"
+                    android:textAllCaps="true"
                     android:textColor="@color/black"
                     android:textSize="24sp" />
 
