feat: Update daily stats icon in bottom navigation
This commit updates the icon for the "Daily Stats" item in the bottom navigation menu.

- A new vector drawable `analytics.xml` has been added to `app/src/main/res/drawable/`.
- `app/src/main/res/menu/bottom_nav.xml` has been updated to use `@drawable/analytics` as the icon for the `dailyStatsFragment` menu item, replacing the previous `timer` icon.

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/dailyStatsFragment"
         android:title="@string/daily_stats"
-        android:icon="@drawable/timer" />
+        android:icon="@drawable/analytics" />
 
     <item
         android:id="@+id/leaderboardFragment"
