--- a/app/src/main/res/layout/activity_counter.xml
+++ b/app/src/main/res/layout/activity_counter.xml
@@ -106,9 +106,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="10dp"
+            android:gravity="center"
             android:orientation="horizontal"
             tools:ignore="UseCompoundDrawables">
 
@@ -121,13 +121,13 @@
                 app:tint="@color/grey" />
 
             <TextView
+                android:id="@+id/timerText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/special_gothic_medium"
                 android:text="@string/timer_sample_duration"
                 android:textColor="@color/grey"
-                android:textSize="20sp"
-                android:id="@+id/timerText" />
+                android:textSize="20sp" />
 
         </LinearLayout>
 
@@ -176,112 +176,111 @@
         app:cardBackgroundColor="@color/very_light_grey"
         app:cardCornerRadius="24dp"
         app:cardElevation="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/resetButton"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
             android:layout_gravity="center"
+            android:layout_marginHorizontal="30dp"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
                 android:fontFamily="@font/special_gothic_medium"
                 android:text="@string/total"
-                android:layout_marginEnd="24dp"
                 android:textAllCaps="true"
                 android:textColor="@color/grey"
                 android:textSize="16sp" />
 
             <TextView
+                android:id="@+id/totalCountText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/special_gothic_medium"
                 android:text="@string/_0"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                android:id="@+id/totalCountText" />
+                android:textSize="16sp" />
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/resetButton"
+    <LinearLayout
+        android:id="@+id/bottom_bar"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginBottom="32dp"
-        app:cardBackgroundColor="@color/very_light_grey"
-        app:cardCornerRadius="24dp"
-        app:cardElevation="0dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/play_pause"
-        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
+        <androidx.cardview.widget.CardView
+            android:id="@+id/resetButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="38dp"
-            android:fontFamily="@font/special_gothic_medium"
-            android:text="@string/reset"
-            android:textAllCaps="true"
-            android:textColor="@color/grey"
-            android:textSize="16sp" />
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/play_pause"
-        android:layout_width="50dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        app:cardBackgroundColor="@color/light_grey_85"
-        app:cardCornerRadius="32dp"
-        app:cardElevation="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/resetButton"
-        app:layout_constraintEnd_toStartOf="@+id/done"
-        app:layout_constraintStart_toEndOf="@+id/resetButton"
-        app:layout_constraintTop_toTopOf="@+id/resetButton">
-
-        <ImageView
-            android:id="@+id/play_pause_icon"
-            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="12dp"
-            android:contentDescription="@string/play_pause"
-            android:src="@drawable/pause"
-            app:tint="@color/grey" />
+            app:cardBackgroundColor="@color/very_light_grey"
+            app:cardCornerRadius="24dp"
+            app:cardElevation="0dp">
 
-    </androidx.cardview.widget.CardView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="38dp"
+                android:fontFamily="@font/special_gothic_medium"
+                android:text="@string/reset"
+                android:textAllCaps="true"
+                android:textColor="@color/grey"
+                android:textSize="16sp" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/done"
-        android:layout_width="50dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        app:cardBackgroundColor="@color/black"
-        app:cardCornerRadius="32dp"
-        app:cardElevation="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/resetButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/play_pause"
-        app:layout_constraintTop_toTopOf="@+id/resetButton">
+        </androidx.cardview.widget.CardView>
 
-        <ImageView
-            android:layout_width="match_parent"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/play_pause"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:layout_margin="12dp"
-            android:contentDescription="@string/finish"
-            android:src="@drawable/check"
-            app:tint="@color/white" />
+            android:layout_marginStart="8dp"
+            app:cardBackgroundColor="@color/light_grey_85"
+            app:cardCornerRadius="32dp"
+            app:cardElevation="0dp">
 
-    </androidx.cardview.widget.CardView>
+            <ImageView
+                android:id="@+id/play_pause_icon"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="12dp"
+                android:contentDescription="@string/play_pause"
+                android:src="@drawable/pause"
+                app:tint="@color/grey" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/done"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
+            app:cardBackgroundColor="@color/black"
+            app:cardCornerRadius="32dp"
+            app:cardElevation="0dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="12dp"
+                android:contentDescription="@string/finish"
+                android:src="@drawable/check"
+                app:tint="@color/white" />
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
