--- a/app/src/main/res/layout/fragment_daily_stats.xml
+++ b/app/src/main/res/layout/fragment_daily_stats.xml
@@ -10,6 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:animateLayoutChanges="true"
         android:orientation="vertical"
         android:padding="24dp">
 
