--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -185,7 +185,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:fontFamily="@font/special_gothic_semibold"
-                    android:text="Set Reminder"
+                    android:text="@string/set_reminder"
                     android:textColor="@color/dark_grey"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toTopOf="@+id/description1"
@@ -198,7 +198,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/special_gothic_regular"
-                    android:text="Set an alarm to stay consistent"
+                    android:text="@string/set_an_alarm_to_stay_consistent"
                     android:textColor="@color/grey"
                     android:textSize="11sp"
                     app:layout_constraintBottom_toBottomOf="parent"
